--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="http://cdn.staticfile.org/element-ui/2.8.2/theme-chalk/index.css"/>
+    <script src="http://cdn.staticfile.org/element-ui/2.8.2/index.js"></script>
+    <title>Eshop Manager</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
